--- a/app/elements/logis/receive-order-popup.html
+++ b/app/elements/logis/receive-order-popup.html
@@ -74,6 +74,7 @@ Copyright © HatioLab Inc. All rights reserved.
       </things-ajax>
 
       <div id="contents">
+         <things-spinner id="thingsSpinner"></things-spinner>
          <things-resource-grid id="grid" class="padding-zero" config="[[gridConfig]]" model="[[gridModel]]"
             columns="[[gridColumns]]" buttons="" paginatable=[[menuInfo.pagination]]
             show-paginator=[[menuInfo.pagination]] current-page="{{page}}" limit="{{limit}}" data="[[items]]"
