--- a/app/elements/logis/sms-das-result.html
+++ b/app/elements/logis/sms-das-result.html
@@ -7,188 +7,445 @@ Copyright © HatioLab Inc. All rights reserved.
 <link rel="import" href="../../bower_components/things-ajax/things-ajax.html">
 <link rel="import" href="../../bower_components/things-form/things-search-form.html">
 <link rel="import" href="../../bower_components/things-grid/things-resource-grid.html">
-<link rel="import" href="../../bower_components/things-content/things-resource-menu-content-behavior.html">
 
+<!--
+  SMS 출고상세내역 조회
+-->
 <dom-module id="sms-das-result">
-    <template>
-        <style>
-            :host {
-                @apply --layout-flex;
-                @apply --layout-vertical;
-            }
+  <template>
+    <style>
+      :host {
+        @apply(--layout-vertical);
+        @apply(--layout-flex);
+      }
 
-            things-resource-grid {
-                @apply --layout-vertical;
-                @apply --layout-flex;
-            }
-        </style>
+      #pas-info-container {
+        @apply(--layout-flex);
+        display: grid;
+        grid-template-rows: 30px auto;
+        grid-template-columns: 0.7fr auto;
+      }
 
-        <!-- Get Menu Meta Ajax -->
-        <things-ajax auto id="resource-meta" resource-url="[[menuMetaUrl]]" resource-action="index"
-            last-response="{{metaData}}">
-        </things-ajax>
+      .grid-subtitle {
+        @apply(--things-default-padding);
+        @apply(--things-subtitle);
+        padding-left: 25px;
+        font-size: 20px;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start: 1;
+        grid-column-end: 2;
+      }
+      .detail-subtitle {
+        @apply(--things-default-padding);
+        @apply(--things-subtitle);
+        padding-left: 25px;
+        font-size: 20px;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        grid-column-start: 2;
+        grid-column-end: 3;
+      }
 
-        <!-- Search form -->
-        <things-search-form id="search-form" title="[[menuInfo.title]]" form-fields="[[searchFormFields]]"
-            select-fields="[[selectFields]]" sort-fields="[[sortFields]]" action-url="[[menuInfo.resource_url]]"
-            page="{{page}}" limit="{{limit}}" last-response="{{lastResponse}}">
-        </things-search-form>
+      #grid {
+        grid-row-start: 2;
+        grid-row-end: 3;
+      }
+      #detail-grid {
+        grid-row-start: 2;
+        grid-row-end: 3;
+      }
 
-        <things-resource-grid id="grid" config="[[gridConfig]]" model="[[gridModel]]" columns="[[summaryGridColumns]]"
-            buttons="[[buttons]]" paginatable=[[menuInfo.pagination]] show-paginator=[[menuInfo.pagination]]
-            current-page="{{page}}" limit="{{limit}}" data="[[items]]" total-count="[[itemCount]]"
-            fixed-column-count="[[menuInfo.fixed_columns]]" grid-save-action="[[menuInfo.grid_save_url]]">
-        </things-resource-grid>
-    </template>
+      things-resource-grid {
+        @apply(--layout-flex);
+      }
+    </style>
 
-    <script>
-        Polymer({
-            is: 'sms-das-result',
+    <things-ajax auto id="resource-meta" method="GET" resource-url="[[menuMetaUrl]]" last-response="{{metaData}}">
+    </things-ajax>
 
-            behaviors: [
-                Things.ResourceMenuContentBehavior
-            ],
+    <things-ajax id="get-detail-ajax" method="GET" resource-url="sms_trackings/search_by_das"
+      resource-action="index" query-fields="[[detailQueryFields]]" limit="100000"
+      last-response="{{dasDetailItems}}">
+    </things-ajax>
 
-            properties: {
-                requiredFormNames: {
-                    type: Array,
-                    value: function () {
-                        return [
-                            'batch_id'
-                        ];
-                    }
+    <things-search-form id="search-form" title="[[menuInfo.title]]" form-fields="[[searchFormFields]]"
+      select-fields="[[selectFields]]" sort-fields="[[sortFields]]" action-url="[[menuInfo.resource_url]]"
+      page="{{page}}" limit="{{limit}}" total="{{total}}" last-response="{{lastResponse}}">
+    </things-search-form>
+
+    <div id="pas-info-container">
+      <span class="grid-subtitle">[[defaultLabel]]</span>
+      <things-resource-grid id="grid" config="[[gridConfig]]" model="[[gridModel]]" columns="[[summaryGridColumns]]"
+        data="[[items]]" total-count="[[itemCount]]" current-page="{{page}}" limit="{{limit}}" total="{{total}}"
+        fixed-column-count="[[menuInfo.fixed_columns]]" grid-save-action="[[menuInfo.grid_save_url]]"
+        buttons="[[buttons]]">
+      </things-resource-grid>
+
+      <span class="detail-subtitle">[[detailLabel]]</span>
+      <things-resource-grid id="detail-grid" config="[[detailGridConfig]]" model="[[detailGridModel]]"
+        columns="[[detailGridColumns]]" fixed-column-count="0" data="[[dasDetailItems.items]]" buttons="[[buttons]]">
+      </things-resource-grid>
+    </div>
+
+
+  </template>
+
+  <script>
+    Polymer({
+      is: 'sms-das-result',
+
+      properties: {
+        requiredFormNames: {
+          type: Array,
+          value: function () {
+            return [
+              'batch_id'
+            ];
+          }
+        },
+        /**
+         * @description 
+         */
+        defaultLabel: {
+          type: String,
+          value: function () {
+            return Things.DataGlobal.t('label.default_screen')
+          }
+        },
+
+        /**
+         * @description 상세 label
+         */
+        detailLabel: {
+          type: String,
+          value: function () {
+            return Things.DataGlobal.t('label.detail_form')
+          }
+        },
+
+        /**
+         * @description detail grid config
+         */
+        detailGridConfig: {
+          type: Object,
+          value: function () {
+            return {
+              displayOptions: {
+                fitStyle: 'evenFill'
+              },
+              options: {
+                checkBar: {
+                  exclusive: true
                 },
-
-                /**
-                 * 그리드 설정
-                 *******
-                 * @type {Object}
-                 */
-                gridConfig: {
-                    type: Object,
-                    value: function () {
-
+                footer: {
+                  visible: true,
+                  summary: {
+                    styles: {
+                      background: "#60cccc99"
                     }
-                },
-
-                /**
-                 * @description 그리드 컬럼
-                 ****************
-                 * @type {Object}
-                 */
-                gridColumns: {
-                    observer: '_gridColumnsChanged'
+                  }
                 }
-            },
-
-            listeners: {
-                'search-form.things-search-form-configured': '_afterFormConfigured',
-                'search-form.things-form-search': '_beforeSubmitHandler'
-            },
-
-            /**
-            * search form before submit evnet handler
-            * @description 검색 수행 전 필수 값 입력 여부를 판단하고 에러 메시지 출력
-            */
-            _beforeSubmitHandler: function (event) {
-                if (!this._checkRequiredFields()) {
-                    event.preventDefault();
-                    this.openInfoMsg({
-                        type: 'info',
-                        title: Things.DataGlobal.t('title.info'),
-                        text: Things.DataGlobal.t('text.fill_all_necessary_fields')
-                    });
-                }
-            },
-
-            /**
-             * @description 서치폼의 필수 필드들이 값이 입력 되었는지 확인 하여 결과를 return
-             */
-            _checkRequiredFields: function () {
-                var searchForm = this.$['search-form'];
-                var formData = searchForm.serializeMyForm();
-                var isValid = true;
-                this.requiredFormNames.forEach(name => {
-                    if (!formData[name]) isValid = false;
-                });
-
-                if (!isValid) {
-                    return false;
-                }
-                return true;
-            },
-
-            /**
-            * 검색폼 구성 완료 이벤트 핸들러
-            **************
-            * @param {Object} event
-            */
-            _afterFormConfigured: function (event) {
-                this.setRequiredForm(this.requiredFormNames);
-            },
-
-            /**
-            * 필수 입력 요구 설정
-            * @param {Array} requiredFormNames
-            */
-            setRequiredForm: function (requiredFormNames) {
-                var formElements = this.$['search-form'].getFormElements();
-                formElements.forEach(function (element) {
-                    element.label = element.label ? element.label.replace(/\*/g, "").trim() : '';
-
-                    let isRequired = false, len = requiredFormNames.length, i = 0;
-                    while (!isRequired && i < len) {
-                        isRequired = element.name === requiredFormNames[i];
-                        i++;
-                    }
-                    if (isRequired) {
-                        element.label = "* " + element.label;
-                        element.initialParams = 'equip_type=SORTER';
-                    }
-                });
-            },
-
-            /**
-             * @description 그리드 컬럼 변경 시...
-             **************
-             * @param {Object} gridColumns
-             */
-            _gridColumnsChanged: function (gridColumns) {
-                // 그리드 설정을 footer 포함하도록 수정
-                this.gridConfig = {
-                    options: {
-                        checkBar: {
-                            exclusive: true
-                        },
-                        footer: {
-                            visible: true,
-                            summary: {
-                                styles: {
-                                    background: "#60cccc99"
-                                }
-                            }
-                        }
-                    }
-                };
-
-                // 컬럼명이 _qty, _pcs인 경우 그리드 footer에 합계 표시
-                gridColumns.forEach(function (column) {
-                    if (column.name.indexOf('_qty') > 0 || column.name.indexOf('_pcs') > 0) {
-                        column.footer = {
-                            expression: 'sum',
-                            text: 0,
-                            styles: {
-                                background: '#60cccc99',
-                                prefix: Things.DataGlobal.t('label.total') + ': ',
-                                numberFormat: '#,###'
-                            }
-                        }
-                    }
-                });
-
-                this.summaryGridColumns = gridColumns;
+              }
             }
+          }
+        },
 
+        /**
+         * @description detail grid model
+         */
+        detailGridModel: {
+          type: Array,
+          value: function () {
+            return [{
+              fieldName: 'chute_no'
+            }, {
+              fieldName: 'cell_no'
+            }, {
+              fieldName: 'shop_cd'
+            }, {
+              fieldName: 'shop_nm'
+            }, {
+              fieldName: 'order_qty',
+              dataType: 'number'
+            }, {
+              fieldName: 'das_qty',
+              dataType: 'number'
+            }]
+          }
+        },
+
+        /**
+         * @description detail grid columns
+         */
+        detailGridColumns: {
+          type: Array,
+          value: function () {
+            return [{
+              name: 'chute_no',
+              fieldName: 'chute_no',
+              width: 80,
+              styles: {
+                textAlignment: 'center'
+              }
+            }, {
+              name: 'cell_no',
+              fieldName: 'cell_no',
+              width: 80,
+              styles: {
+                textAlignment: 'center'
+              }
+            }, {
+              name: 'shop_cd',
+              fieldName: 'shop_cd',
+              header: {
+                text: Things.DataGlobal.t('label.shop_cd')
+              },
+              editable: false,
+              width: 80,
+              styles: {
+                textAlignment: 'center'
+              }
+            }, {
+              name: 'shop_nm',
+              fieldName: 'shop_nm',
+              header: {
+                text: Things.DataGlobal.t('label.shop_nm')
+              },
+              editable: false,
+              width: 120,
+              styles: {
+                textAlignment: 'center'
+              }
+            }, {
+              name: 'order_qty',
+              fieldName: 'order_qty',
+              header: {
+                text: Things.DataGlobal.t('label.order_qty')
+              },
+              styles: {
+                textAlignment: 'far',
+                numberFormat: '#,###'
+              },
+              footer: {
+                expression: 'sum',
+                text: 0,
+                styles: {
+                  background: '#60cccc99',
+                  prefix: Things.DataGlobal.t('label.total') + ': ',
+                  numberFormat: '#,###'
+                }
+              },
+              editable: false,
+              width: 70
+            }, {
+              name: 'das_qty',
+              fieldName: 'das_qty',
+              header: {
+                text: Things.DataGlobal.t('button.das_qty')
+              },
+              styles: {
+                textAlignment: 'far',
+                numberFormat: '#,###'
+              },
+              footer: {
+                expression: 'sum',
+                text: 0,
+                styles: {
+                  background: '#60cccc99',
+                  prefix: Things.DataGlobal.t('label.total') + ': ',
+                  numberFormat: '#,###'
+                }
+              },
+              editable: false,
+              width: 70
+            }]
+          }
+        },
+        detailQueryFields: {
+          type: Array,
+          value: function () {
+            return [{
+              name: "batch_id",
+              operator: "eq",
+              value: ""
+            }, {
+              name: "chute_no",
+              operator: "eq",
+              value: ""
+            }, {
+              name: "sku_cd",
+              operator: "eq",
+              value: ""
+            }];
+          }
+        },
+        dasDetailItems: {
+          type: Object,
+          value: [{
+            total: 0
+          }]
+        },
+
+        /**
+        * 그리드 설정
+        *******
+        * @type {Object}
+        */
+        gridConfig: {
+          type: Object,
+          value: function () {
+
+          }
+        },
+
+        /**
+         * @description 그리드 컬럼
+         ****************
+         * @type {Object}
+         */
+        gridColumns: {
+          observer: '_gridColumnsChanged'
+        }
+      },
+
+      behaviors: [
+        Things.ResourceMenuContentBehavior,
+        Things.MsgBoxBehavior
+      ],
+
+      listeners: {
+        'search-form.things-search-form-configured': '_afterFormConfigured',
+        'search-form.things-form-search': '_beforeSubmitHandler',
+        'grid.things-grid-row-data-select': '_getDetailData'
+      },
+
+      /**
+      * search form before submit evnet handler
+      * @description 검색 수행 전 필수 값 입력 여부를 판단하고 에러 메시지 출력
+      */
+      _beforeSubmitHandler: function (event) {
+        if (!this._checkRequiredFields()) {
+          event.preventDefault();
+          this.openInfoMsg({
+            type: 'info',
+            title: Things.DataGlobal.t('title.info'),
+            text: Things.DataGlobal.t('text.fill_all_necessary_fields')
+          });
+        }
+        this.dasDetailItems = {};
+        this.$['detail-grid'].refreshData(this.dasDetailItems);
+      },
+
+      /**
+       * @description 서치폼의 필수 필드들이 값이 입력 되었는지 확인 하여 결과를 return
+       */
+      _checkRequiredFields: function () {
+        var searchForm = this.$['search-form'];
+        var formData = searchForm.serializeMyForm();
+        var isValid = true;
+        this.requiredFormNames.forEach(name => {
+          if (!formData[name]) isValid = false;
         });
-    </script>
+
+        if (!isValid) {
+          return false;
+        }
+        return true;
+      },
+
+      /**
+      * 검색폼 구성 완료 이벤트 핸들러
+      **************
+      * @param {Object} event
+      */
+      _afterFormConfigured: function (event) {
+        this.setRequiredForm(this.requiredFormNames);
+      },
+
+      /**
+      * 필수 입력 요구 설정
+      * @param {Array} requiredFormNames
+      */
+      setRequiredForm: function (requiredFormNames) {
+        var formElements = this.$['search-form'].getFormElements();
+        formElements.forEach(function (element) {
+          element.label = element.label ? element.label.replace(/\*/g, "").trim() : '';
+
+          let isRequired = false, len = requiredFormNames.length, i = 0;
+          while (!isRequired && i < len) {
+            isRequired = element.name === requiredFormNames[i];
+            i++;
+          }
+          if (isRequired) {
+            element.label = "* " + element.label;
+            element.initialParams = 'equip_type=SORTER';
+          }
+        });
+      },
+
+      /**
+       * @description 사용자 그리드 로우 클릭 이벤트 핸들러
+       * 사용자 선택시 해당 사용자의 도메인 할당 정보를 조회함
+       */
+      _getDetailData: function (event) {
+        var batchId = event.detail.batch_id;
+        var skuCd = event.detail.sku_cd;
+        var chuteNo = event.detail.chute_no
+
+        this.detailQueryFields.forEach(function (field) {
+          if (field.name == "batch_id") {
+            field.value = batchId;
+          } else if (field.name == "sku_cd") {
+            field.value = skuCd;
+          } else if (field.name == "chute_no") {
+            field.value = chuteNo;
+          }
+        });
+
+        this.$['get-detail-ajax'].generateRequest();
+      },
+
+      /**
+      * @description 그리드 컬럼 변경 시...
+      **************
+      * @param {Object} gridColumns
+      */
+      _gridColumnsChanged: function (gridColumns) {
+        // 그리드 설정을 footer 포함하도록 수정
+        this.gridConfig = {
+          options: {
+            checkBar: {
+              exclusive: true
+            },
+            footer: {
+              visible: true,
+              summary: {
+                styles: {
+                  background: "#60cccc99"
+                }
+              }
+            }
+          }
+        };
+
+        // 컬럼명이 _qty, _pcs인 경우 그리드 footer에 합계 표시
+        gridColumns.forEach(function (column) {
+          if (column.name.indexOf('_qty') > 0 || column.name.indexOf('_pcs') > 0) {
+            column.footer = {
+              expression: 'sum',
+              text: 0,
+              styles: {
+                background: '#60cccc99',
+                prefix: Things.DataGlobal.t('label.total') + ': ',
+                numberFormat: '#,###'
+              }
+            }
+          }
+        });
+
+        this.summaryGridColumns = gridColumns;
+      }
+    });
+  </script>
 </dom-module>
