--- a/app/elements/logis/das-job-batch.html
+++ b/app/elements/logis/das-job-batch.html
@@ -152,6 +152,7 @@ Copyright © HatioLab Inc. All rights reserved.
         'grid.things-grid-column-dblclicked': '_gridColumnDoubleClicked', // 그리드 컬럼 더블 클릭시
 
         'receive-order-ajax.things-ajax-response': '_openReceiveOrderPopup', // '주문 수신' 처리 완료시
+        'target-class-ajax.things-ajax-response': '_transactionCompleted', // '대상 분류' 처리 완료시
         'cancel-batch-ajax.things-ajax-response': '_transactionCompleted', // '추문 취소' 처리 완료시
         'start-receiving-ajax.things-ajax-response': '_transactionCompleted', // '주문 수신 시작' 처리 완료시
         'instruct-job-ajax.things-ajax-response': '_transactionCompleted', // '작업 지시' 처리 완료시
@@ -168,7 +169,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} gridColumns
        */
-      _gridColumnsChanged: function (gridColumns) {
+      _gridColumnsChanged: function(gridColumns) {
         // 그리드 설정을 footer 포함하도록 수정
         this.gridConfig = {
           options: {
@@ -187,7 +188,7 @@ Copyright © HatioLab Inc. All rights reserved.
         };
 
         // 컬럼명이 _qty, _pcs인 경우 그리드 footer에 합계 표시
-        gridColumns.forEach(function (column) {
+        gridColumns.forEach(function(column) {
           if (column.name.indexOf('_qty') > 0 || column.name.indexOf('_pcs') > 0) {
             column.footer = {
               expression: 'sum',
@@ -209,7 +210,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onGridDataChanged: function (event) {
+      _onGridDataChanged: function(event) {
         var grid = this.$['grid'].getGridObject();
 
         if (grid) {
@@ -225,10 +226,10 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onGridConfigure: function (event) {
+      _onGridConfigure: function(event) {
         var grid = this.$['grid'];
 
-        grid._onGridCheckCellClicked = function (grid, rowIndex) {
+        grid._onGridCheckCellClicked = function(grid, rowIndex) {
           var cRow = grid.getCheckedRows();
 
           // 어떤 행이 체크된 상태에서 다른 행의 체크셀을 체크하지않고 그 주변 영역을 클릭했을 때는 반응하지 않도록
@@ -251,7 +252,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _gridColumnDoubleClicked: function (event) {
+      _gridColumnDoubleClicked: function(event) {
         var index = event.detail.index;
 
         if (index.column.name() == 'id') {
@@ -277,9 +278,9 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {String} status 작업 배치 상태
        * @param {String} jobType 작업 배치의 작업 유형
        */
-      changeButtonStatus: function (status, jobType) {
+      changeButtonStatus: function(status, jobType) {
 
-        var btns = this.buttons.map(function (b) {
+        var btns = this.buttons.map(function(b) {
           if (!status || status === '') {
             b.hidden = true;
             return Object.assign(new Object(), b);
@@ -310,7 +311,7 @@ Copyright © HatioLab Inc. All rights reserved.
           }
         });
 
-        btns.map(function (b) {
+        btns.map(function(b) {
           if (b.id == 'recommend_box_type-btn') {
             b.hidden = false;
             return Object.assign(new Object(), b);
@@ -341,7 +342,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onReceiveOrderTap: function (event) {
+      _onReceiveOrderTap: function(event) {
         var title = Things.DataGlobal.t(event.detail.text);
         var searchFormData = this.$['search-form'].serializeMyForm();
         var jobDate = searchFormData.job_date;
@@ -380,7 +381,7 @@ Copyright © HatioLab Inc. All rights reserved.
             text: text,
             showCancelButton: true
 
-          }, function () {
+          }, function() {
             var ajaxUrl = `${areaCd}/${stageCd}/${comCd}/${jobDate}?job_type=${jobType}`;
             ajax.resourceId = ajaxUrl;
             ajax.generateRequest();
@@ -393,7 +394,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onCancelBatchTap: function (event) {
+      _onCancelBatchTap: function(event) {
         var row = this._checkedGridRow();
 
         if (row) {
@@ -409,7 +410,7 @@ Copyright © HatioLab Inc. All rights reserved.
             title: title,
             text: text,
             showCancelButton: true
-          }, function () {
+          }, function() {
             ajax.resourceId = batchId;
             ajax.generateRequest();
           }.bind(this));
@@ -421,7 +422,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onTargetClassingTap: function (event) {
+      _onTargetClassingTap: function(event) {
         var row = this._checkedGridRow();
 
         if (row) {
@@ -438,7 +439,7 @@ Copyright © HatioLab Inc. All rights reserved.
             text: text,
             showCancelButton: true
 
-          }, function () {
+          }, function() {
             ajax.resourceId = batchId;
             ajax.generateRequest();
           }.bind(this));
@@ -450,7 +451,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onOrderPreprocessTap: function (event) {
+      _onOrderPreprocessTap: function(event) {
         var title = Things.DataGlobal.t(event.detail.text);
         var row = this._checkedGridRow();
 
@@ -481,7 +482,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onJobInstructTap: function (event) {
+      _onJobInstructTap: function(event) {
         var title = Things.DataGlobal.t(event.detail.text);
         var checkedRow = this._checkedGridRow();
 
@@ -516,7 +517,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} rowData
        */
-      _instructSMSBatchProcess: function (rowData) {
+      _instructSMSBatchProcess: function(rowData) {
         var props = {
           id: "instruct-job-ajax",
           method: "POST",
@@ -598,7 +599,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _requestInstructJob: function (checkedRow) {
+      _requestInstructJob: function(checkedRow) {
         let msg = Things.DataGlobal.t('text.Sure to X', {
           x: Things.DataGlobal.t('button.job_instruct')
         });
@@ -607,7 +608,7 @@ Copyright © HatioLab Inc. All rights reserved.
           type: 'warning',
           title: msg,
           showCancelButton: true
-        }, function () {
+        }, function() {
           var props = {
             id: "instruct-job-ajax",
             method: "POST",
@@ -642,7 +643,7 @@ Copyright © HatioLab Inc. All rights reserved.
           view: view,
           modal: true,
           dialogSize: 'small',
-          closeCallback: function () {
+          closeCallback: function() {
             this.$['search-form'].submitMyForm();
           }.bind(this)
         });
@@ -675,7 +676,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onMergeBatchTap: function (event) {
+      _onMergeBatchTap: function(event) {
         var checkedRow = this._checkedGridRow();
 
         if (checkedRow) {
@@ -687,7 +688,7 @@ Copyright © HatioLab Inc. All rights reserved.
             this.fire('things-open-popup-view', {
               view: mergePopup,
               modal: true,
-              closeCallback: function () {
+              closeCallback: function() {
                 this.$['search-form'].submitMyForm();
               }.bind(this)
             });
@@ -705,7 +706,7 @@ Copyright © HatioLab Inc. All rights reserved.
             this.fire('things-open-popup-view', {
               view: mergePopup,
               modal: true,
-              closeCallback: function () {
+              closeCallback: function() {
                 this.$['search-form'].submitMyForm();
               }.bind(this)
             });
@@ -718,7 +719,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onCancelInstructJobTap: function (event) {
+      _onCancelInstructJobTap: function(event) {
         var title = Things.DataGlobal.t(event.detail.text);
         this._confirmTransaction(event.detail.id, 'cancel-instruct-job-ajax', title);
       },
@@ -728,7 +729,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onJobCompleteTap: function (event) {
+      _onJobCompleteTap: function(event) {
         var checkedRow = this._checkedGridRow();
         var title = checkedRow ? '[' + (checkedRow.equip_nm ? checkedRow.equip_nm : checkedRow.id) + '] ' : '';
         title += Things.DataGlobal.t(event.detail.text);
@@ -741,7 +742,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _onGroupCompleteTap: function (event) {
+      _onGroupCompleteTap: function(event) {
         var checkedRow = this._checkedGridRow();
         var title = Things.DataGlobal.t(event.detail.text);
         this._showButton('group_complete-btn', false);
@@ -754,7 +755,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {String} btnId
        * @param {Boolean} enabled
        */
-      _showButton: function (btnId, enabled) {
+      _showButton: function(btnId, enabled) {
         var button = this._getButtonElement(btnId);
         if (button) {
           button.hidden = !enabled;
@@ -767,7 +768,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {String} btnId
        * @return 그룹 완료 버튼 엘리먼트
        */
-      _getButtonElement: function (btnId) {
+      _getButtonElement: function(btnId) {
         return this.querySelector('#' + btnId);
       },
 
@@ -776,7 +777,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} e
        */
-      _onCopyRegion: function (e) {
+      _onCopyRegion: function(e) {
         e.preventDefault();
         var checkedRow = this._checkedGridRow();
 
@@ -792,7 +793,7 @@ Copyright © HatioLab Inc. All rights reserved.
               view: copyRegionPopup,
               modal: true,
               dialogSize: 'large',
-              closeCallback: function () {
+              closeCallback: function() {
                 this.refreshData();
               }.bind(this)
             });
@@ -811,12 +812,12 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _openReceiveOrderPopup: function (event) {
+      _openReceiveOrderPopup: function(event) {
         var receiptSummary = event.detail;
 
         // 1. 수신할 주문이 없는 경우
         if (receiptSummary.status == 'F') {
-          setTimeout(function () {
+          setTimeout(function() {
             this.openInfoMsg({
               type: 'info',
               title: '수신할 주문이 없습니다.',
@@ -839,7 +840,7 @@ Copyright © HatioLab Inc. All rights reserved.
           this.fire('things-open-popup-view', {
             view: simpleReceiveOrderPopup,
             modal: true,
-            closeCallback: function () {
+            closeCallback: function() {
               searchForm.submitMyForm();
             }
           });
@@ -859,7 +860,7 @@ Copyright © HatioLab Inc. All rights reserved.
           this.fire('things-open-popup-view', {
             view: receiveOrderPopup,
             modal: true,
-            closeCallback: function () {
+            closeCallback: function() {
               searchForm.submitMyForm();
             }
           });
@@ -871,7 +872,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _transactionCompleted: function (event) {
+      _transactionCompleted: function(event) {
         var text = Things.DataGlobal.t('text.processed_msg');
         this.openInfoMsg({
           type: 'info',
@@ -886,7 +887,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _transactionFailed: function (event) {
+      _transactionFailed: function(event) {
         this.openConfirmMsg({
           type: 'error',
           title: Things.DataGlobal.t('title.error'),
@@ -899,7 +900,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _jobCompleteResponsed: function (event) {
+      _jobCompleteResponsed: function(event) {
         this._showButton('job_complete-btn', true);
 
         if (event.detail.result === 'ng') {
@@ -909,7 +910,7 @@ Copyright © HatioLab Inc. All rights reserved.
             text: Things.DataGlobal.t('text.Sure to Complete'),
             showCancelButton: true
 
-          }, function () {
+          }, function() {
             var checkedRow = this._checkedGridRow();
             var ajax = document.createElement('things-ajax');
             ajax.resourceId = checkedRow.id;
@@ -917,7 +918,7 @@ Copyright © HatioLab Inc. All rights reserved.
             ajax.resourceAction = 'update';
             ajax.resourceUrl = 'job_batches/:id/close_batch_forcibly';
 
-            ajax.addEventListener('things-ajax-response', function (event) {
+            ajax.addEventListener('things-ajax-response', function(event) {
               if (event.detail.result === 'ok') {
                 this._transactionCompleted(event);
               } else {
@@ -937,7 +938,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @description 작업 완료 요청 에러 발생시 작업 완료 버튼을 다시 활성화 함
        **************
        */
-      _jobCompleteError: function () {
+      _jobCompleteError: function() {
         this._showButton('job_complete-btn', true);
       },
 
@@ -946,7 +947,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _groupCompleteResponsed: function (event) {
+      _groupCompleteResponsed: function(event) {
         this._showButton('group_complete-btn', true);
 
         if (event.detail.result === 'ng') {
@@ -956,7 +957,7 @@ Copyright © HatioLab Inc. All rights reserved.
             text: Things.DataGlobal.t('text.Sure to Complete'),
             showCancelButton: true
 
-          }, function () {
+          }, function() {
             var checkedRow = this._checkedGridRow();
             var ajax = this.$['group-complete-batch-ajax'];
             ajax.resourceId = checkedRow.id;
@@ -975,7 +976,7 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _groupCompleteError: function (event) {
+      _groupCompleteError: function(event) {
         this._showButton('group_complete-btn', true);
       },
 
@@ -984,11 +985,11 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _transactionInstructRackCheckCompleted: function (event) {
+      _transactionInstructRackCheckCompleted: function(event) {
         var checkedRow = this._checkedGridRow();
         var jobInstructPopup = this.createBatchInstructPopup(checkedRow);
 
-        var closeCallback = function () {
+        var closeCallback = function() {
           this.refreshData();
         }.bind(this);
 
@@ -1008,7 +1009,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {String} ajaxId Ajax Id
        * @param {String} title 트랜잭션 확인용 타이틀
        */
-      _confirmTransaction: function (buttonId, ajaxId, title) {
+      _confirmTransaction: function(buttonId, ajaxId, title) {
         var checkedRow = this._checkedGridRow();
         if (checkedRow) {
           if (this._checkTransactionEnabled(buttonId, checkedRow.status)) {
@@ -1025,7 +1026,7 @@ Copyright © HatioLab Inc. All rights reserved.
                 showCancelButton: true,
                 closeOnConfirm: false
 
-              }, function () {
+              }, function() {
                 this.openConfirmMsg({
                   type: 'info',
                   title: Things.DataGlobal.t('text.Server Processing'),
@@ -1039,7 +1040,7 @@ Copyright © HatioLab Inc. All rights reserved.
                 };
                 ajax.generateRequest();
 
-              }.bind(this), function () {
+              }.bind(this), function() {
                 if (buttonId === 'job_complete-btn' || buttonId === 'group_complete-btn') {
                   this._showButton(buttonId, true);
                 }
@@ -1055,7 +1056,7 @@ Copyright © HatioLab Inc. All rights reserved.
        *****************
        * @return {Object} 그리드에 체크된 행 데이터
        */
-      _checkedGridRow: function () {
+      _checkedGridRow: function() {
         var resourceGrid = this.$.grid;
         var rows = resourceGrid.getGridObject().getCheckedRows();
 
@@ -1071,7 +1072,7 @@ Copyright © HatioLab Inc. All rights reserved.
             closeOnConfirm: true,
             showCancelButton: false
 
-          }, function () {
+          }, function() {
             this._showButton('job_complete-btn', true);
             this._showButton('group_complete-btn', true);
 
@@ -1088,7 +1089,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {String} title
        * @return {Object} 작업 병합 팝업
        */
-      newMergeBatchPopup: function (batch, title) {
+      newMergeBatchPopup: function(batch, title) {
         var mergeBatchPopup = document.createElement('job-batch-detail');
         mergeBatchPopup.title = title + ' (' + batch.job_id + ')';
         mergeBatchPopup.sourceBatch = batch;
@@ -1104,7 +1105,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {String} status 배치 상태
        * @return {Boolean} 작업 처리 가능 여부
        */
-      _checkTransactionEnabled: function (buttonId, status) {
+      _checkTransactionEnabled: function(buttonId, status) {
         // '주문 수신', '주문 가공', '작업 지시' 시 작업 배치 상태 체크
         if (buttonId == 'receive_order-btn' || buttonId == 'order_preprocess-btn' || buttonId == 'job_instruct-btn') {
           // 이미 완료되었습니다.
@@ -1173,7 +1174,7 @@ Copyright © HatioLab Inc. All rights reserved.
             this.openInfoMsg({
               title: Things.DataGlobal.t('title.info'),
               text: Things.DataGlobal.t('text.process_is_not_running')
-            }, function () {
+            }, function() {
               this._showButton('job_complete-btn', true);
               this._showButton('group_complete-btn', true);
             }.bind(this));
@@ -1191,7 +1192,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {Object} jobBatch
        * @return 주문 가공 완료 팝업 화면
        */
-      createBatchInstructPopup: function (jobBatch) {
+      createBatchInstructPopup: function(jobBatch) {
         // 1. 작업 지시 팝업 생성
         var completePopup = document.createElement('job-batch-instruct-popup');
 
@@ -1212,7 +1213,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @description 데이터 새로 조회
        * ***********************
        */
-      refreshData: function () {
+      refreshData: function() {
         if (this.initialSearchFlag) {
           var searchForm = this.getResourceSearchForm();
           if (this.initialSearchParams) {
