작업 배치에 차수 UP 버튼 추가

--- a/app/elements/logis/das-job-batch.html
+++ b/app/elements/logis/das-job-batch.html
@@ -294,7 +294,7 @@ Copyright © HatioLab Inc. All rights reserved.
             return Object.assign(new Object(), b);
 
           } else if (status === 'READY') {
-            b.hidden = !(b.id == 'change_rack-btn' || b.id == 'order_preprocess-btn' || b.id == 'job_instruct-btn' || b.id == 'total_picking_instruct-btn' || b.id == 'cancel_order-btn' || b.id == 'split_cancel-btn' || b.id == 'change_type_to_hw-btn');
+            b.hidden = !(b.id == 'change_rack-btn' || b.id == 'order_preprocess-btn' || b.id == 'job_instruct-btn' || b.id == 'total_picking_instruct-btn' || b.id == 'cancel_order-btn' || b.id == 'split_cancel-btn' || b.id == 'change_type_to_hw-btn' || b.id == 'batch_job_seq_up-btn');
             return Object.assign(new Object(), b);
 
           } else if (status === 'RUN') {
