반품실적 강제전송

--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -25,3 +25,4 @@
 <link rel="import" href="./sms-rtn-box.html" />
 <link rel="import" href="./sms-rtn-insp.html" />
 <link rel="import" href="./sms-rtn-result.html" />
+<link rel="import" href="./sms-srtn-job-batch-close.html" />
