--- a/app/elements/logis/job-batch.html
+++ b/app/elements/logis/job-batch.html
@@ -385,7 +385,7 @@ Copyright © HatioLab Inc. All rights reserved.
             }
             return Object.assign(new Object(), b);
 
-          } else if (jobType === 'DPS' || jobType === 'QPS') {
+          } else if (jobType === 'DPS' || jobType === 'QPS' || jobType == 'PDAS') {
             if (b.id == 'order_preprocess-btn' || b.id == 'change_status-btn') {
               b.hidden = true;
             } else if (b.id === 'merge_batch-btn' && status === 'READY') {
@@ -576,6 +576,7 @@ Copyright © HatioLab Inc. All rights reserved.
           if (this._checkTransactionEnabled(event.detail.id, checkedRow.status)) {
             var jobType = checkedRow.job_type;
             switch (jobType) {
+              case 'PDAS':
               case 'DPS':
               case 'QPS':
                 {
@@ -820,7 +821,7 @@ Copyright © HatioLab Inc. All rights reserved.
           // 설비 코드가 지정 안된 배치는 호기 선택 popup
           let view = this.create('dps-rack-assignment', {
             resourceName: 'DpsRackAssignment',
-            title: Things.DataGlobal.t("menu.DpsRackAssignment"),
+            title: Things.DataGlobal.t("button.assign_rack"),
             batch: rowData,
             parent: this
           });
@@ -944,13 +945,13 @@ Copyright © HatioLab Inc. All rights reserved.
                 this.$['search-form'].submitMyForm();
               }.bind(this)
             });
-          } else if (checkedRow.job_type != 'DPS' && checkedRow.status != 'WAIT') { // DPS 외 작업은 가공 대기 상태에서 가능 
+          } else if ((checkedRow.job_type != 'DPS' && checkedRow.job_type != 'PDAS') && checkedRow.status != 'WAIT') { // DPS 외 작업은 가공 대기 상태에서 가능 
             this.openInfoMsg({
               type: 'warning',
               title: Things.DataGlobal.t('text.is_not_wait_state')
             });
 
-          } else if (checkedRow.job_type == 'DPS' && checkedRow.status != 'READY') { // DPS 는 작업지시 대기 상태에서 가능 
+          } else if ((checkedRow.job_type == 'DPS' || checkedRow.job_type == 'PDAS') && checkedRow.status != 'READY') { // DPS 는 작업지시 대기 상태에서 가능 
             this.openInfoMsg({
               type: 'warning',
               title: Things.DataGlobal.t('text.is_not_ready_state')
