--- a/app/elements/logis/job-batch-detail.html
+++ b/app/elements/logis/job-batch-detail.html
@@ -11,9 +11,8 @@ Copyright © HatioLab Inc. All rights reserved.
 <link rel="import" href="../../bower_components/things-msg-box-behavior/things-msg-box-behavior.html">
 
 <!--
-MPS 작업 배치 상세 화면
+  작업 배치 > 작업 병합 화면
 -->
-
 <dom-module id="job-batch-detail">
   <template>
     <style>
@@ -43,35 +42,37 @@ MPS 작업 배치 상세 화면
     </style>
 
     <!-- 작업 배치 리스트 Ajax -->
-    <things-ajax id="search-batch-ajax" resource-url="job_batches" resource-action="index"
+    <things-ajax 
+      id="search-batch-ajax" 
+      resource-url="job_batches" 
+      resource-action="index"
       last-response="{{batchResult}}">
     </things-ajax>
 
     <!-- 작업 병합 Ajax -->
-    <things-ajax id="merge-batch-ajax" resource-url="job_batches/:source_batch_id/instruct/merge_batch/:main_batch_id"
+    <things-ajax 
+      id="merge-batch-ajax" 
+      resource-url="job_batches/:source_batch_id/instruct/merge_batch/:main_batch_id"
       resource-action="update">
     </things-ajax>
 
+    <!-- 작업 병합 버튼 -->
     <div id="top-section">
       <div class="horizontal">
-        <!--things-resource-combo
-          select-fields="[[comboSelectFields]]"
-          label="[[regionComboLabel]]"
-          label-path="region_nm"
-          value-path="region_cd"
-          resource-url="region">
-        </things-resource-combo>
-
-        <things-button-bar id="search-btn-group" buttons="[[searchButton]]"></things-button-bar-->
-
         <div class="button-group">
           <things-button-bar id="job-btn-group" buttons="[[buttons]]"></things-button-bar>
         </div>
       </div>
     </div>
 
-    <things-resource-grid id="grid" model="[[gridModel]]" columns="[[gridColumns]]" config="[[gridConfig]]"
-      fixed-column-count="[[fixedColumnCount]]" data="[[items]]">
+    <!-- 진행 중인 배치 리스트 -->
+    <things-resource-grid 
+      id="grid" 
+      model="[[gridModel]]" 
+      columns="[[gridColumns]]" 
+      config="[[gridConfig]]"
+      fixed-column-count="[[fixedColumnCount]]" 
+      data="[[items]]">
     </things-resource-grid>
   </template>
 
@@ -84,6 +85,11 @@ MPS 작업 배치 상세 화면
       ],
 
       properties: {
+        /**
+         * @description 배치 그리드 설정
+         ************************
+         * @type {Object}
+         */
         gridConfig: {
           type: Object,
           value: function() {
@@ -98,7 +104,9 @@ MPS 작업 배치 상세 화면
         },
 
         /**
-         * resource combo에서 조회시 사용하는 select fields
+         * @description resource combo에서 조회시 사용하는 select fields
+         ************************
+         * @type {Array}
          */
         comboSelectFields: {
           type: Array,
@@ -108,7 +116,9 @@ MPS 작업 배치 상세 화면
         },
 
         /**
-         * resource combo label
+         * @description resource combo label
+         ************************
+         * @type {String}
          */
         regionComboLabel: {
           type: String,
@@ -118,14 +128,18 @@ MPS 작업 배치 상세 화면
         },
 
         /**
-         * 메인 작업 배치
+         * @description 메인 작업 배치
+         ************************
+         * @type {Object}
          */
         sourceBatch: {
-          type: String
+          type: Object
         },
 
         /**
-         * 배치 결과
+         * @description 배치 결과
+         ************************
+         * @type {Object}
          */
         batchResult: {
           type: Object,
@@ -133,7 +147,9 @@ MPS 작업 배치 상세 화면
         },
 
         /**
-         * 조회 버튼 리스트
+         * @description 조회 버튼 리스트
+         ************************
+         * @type {Array}
          */
         searchButton: {
           type: Array,
@@ -146,7 +162,9 @@ MPS 작업 배치 상세 화면
         },
 
         /**
-         * 버튼 리스트
+         * @description 버튼 리스트
+         ************************
+         * @type {Array}
          */
         buttons: {
           type: Array,
@@ -171,7 +189,7 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * 병합 요청시 
+       * @description 병합 요청시 
        **************
        * @param {Object} event
        */
@@ -185,7 +203,7 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * 병합 완료시
+       * @description 병합 완료시
        **************
        * @param {Object} event
        */
@@ -207,7 +225,7 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * 작업 배치 그리드 구성 완료시
+       * @description 작업 배치 그리드 구성 완료시
        **************
        * @param {Object} event
        */
@@ -216,7 +234,7 @@ MPS 작업 배치 상세 화면
         ajax.resourceId = this.sourceBatch.id;
         var jobType = this.sourceBatch.job_type;
 
-        if (jobType == 'DAS' || jobType == 'RTN' || jobType == 'DPS' || jobType == 'SRTN' || jobType == 'SDAS' || jobType == 'SDPS') {
+        if (jobType == 'DAS' || jobType == 'RTN' || jobType == 'DPS' || jobType == 'PDAS' || jobType == 'SRTN' || jobType == 'SDAS' || jobType == 'SDPS') {
           ajax.queryFields = [{
             name: 'status',
             value: 'RUN'
@@ -231,7 +249,7 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * 배치 조회 결과 변경시
+       * @description 배치 조회 결과 변경시
        **************
        * @param {Object} batchResult
        */
@@ -240,7 +258,7 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * 작업 병합 버튼 클릭 이벤트 핸들러
+       * @description 작업 병합 버튼 클릭 이벤트 핸들러
        * 병합 버튼 클릭시 실행되며 validateBeforeMerge 통과하면
        * 병합을 수행 실패하면 showInvalidMessage를 통해 메시지 출력
        *******************
@@ -273,7 +291,7 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * 그리드에서 체크된 Row의 데이터를 리턴
+       * @description 그리드에서 체크된 Row의 데이터를 리턴
        *****************
        * @return {Object} 그리드에 체크된 행 데이터
        */
@@ -306,9 +324,10 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * search-btn-tap event handler
+       * @description search-btn-tap event handler
        * 조회 버튼 클릭시 실행되며 validateBeforeSeach를 통과하면
        * 조회를 수행 실패하면 showInvalidMessage를 통해 메시지 출력
+       ************************
        */
       _searchBtnTapped: function() {
         try {
@@ -320,37 +339,38 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * assign-region-btn-tap event handler
+       * @description assign-region-btn-tap event handler
        * 호기지정 버튼 클릭시 실행되며 validateBeforeAssign 통과하면
        * 호기지정을 수행 실패하면 showInvalidMessage를 통해 메시지 출력
+       ************************
        */
       _assignRegionBtnTapped: function() {
         try {
           this.validateBeforeAssign();
-          console.log('Do assign');
         } catch (error) {
           this.showInvalidMessage(error);
         }
       },
 
       /**
-       * job-instruct-btn-tap event handler
+       * @description job-instruct-btn-tap event handler
        * 작업지시 버튼 클릭시 실행되며 validateBeforeJobInstruct 통과하면
        * 작업지시를 수행 실패하면 showInvalidMessage를 통해 메시지 출력
+       ************************
        */
       _jobInstructBtnTapped: function() {
         try {
           this.validateBeforeJobInstruct();
-          console.log('Do job instruct');
         } catch (error) {
           this.showInvalidMessage(error);
         }
       },
 
       /**
-       * job-complete-btn-tap event handler
+       * @description job-complete-btn-tap event handler
        * 작업완료 버튼 클릭시 실행되며 validateBeforeJobInstruct 통과하면
        * 작업완료를 수행 실패하면 showInvalidMessage를 통해 메시지 출력
+       ************************
        */
       _jobCompleteBtnTapped: function() {
         try {
@@ -361,7 +381,7 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * 조회 전 실행하는 validation
+       * @description 조회 전 실행하는 validation
        * validation 실패시 화면에 출력할 title, text를 throw
        */
       validateBeforeSeach: function() {
@@ -372,9 +392,9 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * 병합 전 실행하는 validation
+       * @description 병합 전 실행하는 validation
        * validation 실패시 화면에 출력할 title, text를 throw
-       *
+       ************************
        */
       validateBeforeMerge: function() {
         throw {
@@ -386,8 +406,9 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * 호기지정 전 실행하는 validation
+       * @description 호기 지정 전 실행하는 validation
        * validation 실패시 화면에 출력할 title, text를 throw
+       ************************
        */
       validateBeforeAssign: function() {
         throw {
@@ -399,8 +420,9 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * 작업지시 전 실행하는 validation
+       * @description 작업지시 전 실행하는 validation
        * validation 실패시 화면에 출력할 title, text를 throw
+       ************************
        */
       validateBeforeJobInstruct: function() {
         throw {
@@ -412,8 +434,9 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * 작업완료 전 실행하는 validation
+       * @description 작업완료 전 실행하는 validation
        * validation 실패시 화면에 출력할 title, text를 throw
+       ************************
        */
       validateBeforeJobComplte: function() {
         throw {
@@ -423,7 +446,8 @@ MPS 작업 배치 상세 화면
       },
 
       /**
-       * validation에서 발생한 error를 통해 메시지를 출력함
+       * @description validation에서 발생한 error를 통해 메시지를 출력
+       ************************
        */
       showInvalidMessage: function(config) {
         this.openInfoMsg({
